home work 12 commit